5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1822_1645.log
== TEST (2019-06-13 10:16:50) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for i in v:
	if(v[i]>=2000):
		i=i+1
print(i)

p=0
n=size(v)
c=zeros(n,dtype=int)
for x in v:
	if(c[x]>=2000):
		c[0]=p
		c[x]=p+1
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:17:37) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for i in (0,size(v)):
	if(v[i]>=2000):
		i=i+1
print(i)

p=0
n=size(v)
c=zeros(n,dtype=int)
for x in v:
	if(c[x]>=2000):
		c[0]=p
		c[x]=p+1
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:18:29) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for i in (0,size(v)):
	if(v>=2000):
		i=i+1
print(i)

p=0
n=size(v)
c=zeros(n,dtype=int)
for x in v:
	if(c[x]>=2000):
		c[0]=p
		c[x]=p+1
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:19:16) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in (0,size(v)):
	if(v[y]=2000):
		i=i+1
print(i)

p=0
n=size(v)
c=zeros(n,dtype=int)
for x in v:
	if(c[x]>=2000):
		c[0]=p
		c[x]=p+1
print(c)			
	
	
	
-- ERROR:
File "XXXX", line 5
    if(v[y]=2000):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:19:23) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in (0,size(v)):
	if(v[y]=2000):
		i=i+1
print(i)

p=0
n=size(v)
c=zeros(n,dtype=int)
for x in v:
	if(c[x]>=2000):
		c[0]=p
		c[x]=p+1
print(c)			
	
	
	
-- EXECUTION TIME:
0.772665
-- ERROR:
  File "/home/codebench/codes/1822/1645/main.py", line 5
    if(v[y]=2000):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:19:24) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in (0,size(v)):
	if(v[y]=2000):
		i=i+1
print(i)

p=0
n=size(v)
c=zeros(n,dtype=int)
for x in v:
	if(c[x]>=2000):
		c[0]=p
		c[x]=p+1
print(c)			
	
	
	
-- ERROR:
File "XXXX", line 5
    if(v[y]=2000):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:19:39) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in (0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)

p=0
n=size(v)
c=zeros(n,dtype=int)
for x in v:
	if(c[x]>=2000):
		c[0]=p
		c[x]=p+1
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:20:10) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)

p=0
n=size(v)
c=zeros(n,dtype=int)
for x in v:
	if(c[x]>=2000):
		c[0]=p
		c[x]=p+1
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:59) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)


n=size(v)
c=zeros(n,dtype=int)
for x in v:
	p=0
	if(c[x]>=2000):
		c[0]=p
		c[x]=p+1
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:22:17) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)


n=size(v)
c=zeros(n,dtype=int)
for x in v:
	p=0
	if(c[x]>=2000):
		c[0]=p
		c[x]=p+1
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:24:03) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)


n=size(v)
c=zeros(n,dtype=int)
for x in range(0,size(v)):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=p+1
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:25:40) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)


n=size(v)
c=zeros(n,dtype=int)
for x in range(0,size(v)):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=x
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:26:19) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)


n=size(v)
c=zeros(n,dtype=int)
for x in range(0,size(v)):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=x
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:27:36) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)


n=size(v)
c=zeros(n,dtype=int)
for x in range(0,size(v)):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=x
print(c)			
	
	
	
-- EXECUTION TIME:
0.858317
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
[0 0 2 0 4 5 0 0]
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
[0 0 2 0 4]
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
[0 0 0 0 0 5 6 7 0 9]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:36) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)


n=size(v)
c=zeros(n,dtype=int)
for x in range(0,size(v)):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=x
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:29:55) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)


n=size(v)
c=zeros(n,dtype=int)
for x in range(0,size(v)):
	p=0
	if(size(v)>=2000):
		c[0]=p
		c[x]=x
	elif(v[x]<2000):
		
print(c)			
	
	
	
-- ERROR:
File "XXXX", line 19
    print(c)			
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:30:52) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)


n=size(v)
c=zeros(n,dtype=int)
for x in range(0,size(v)):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=x
	elif(v[x]<2000):
		
print(c)			
	
	
	
-- ERROR:
File "XXXX", line 19
    print(c)			
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:31:03) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)


n=size(v)
c=zeros(n,dtype=int)
for x in range(0,size(v)):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=x
		
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:41:47) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)


n=size(v)
c=zeros(n,dtype=int)
for x in range(0,size(v)):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=x
		
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:46:59) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)



c=zeros(i,dtype=int)
for x in range(0,size(v)):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=x
		
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:47:20) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)



c=zeros(i,dtype=int)
for x in range(0,size(v)):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=x
		
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:47:22) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)



c=zeros(i,dtype=int)
for x in range(0,size(v)):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=x
		
print(c)			
	
	
	
-- EXECUTION TIME:
0.906002
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1822/1645/main.py", line 16, in <module>
    c[x]=x
IndexError: index 4 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:47:27) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)



c=zeros(i,dtype=int)
for x in range(0,size(v)):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=x
		
print(c)			
	
	
	
-- EXECUTION TIME:
0.721694
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1822/1645/main.py", line 16, in <module>
    c[x]=x
IndexError: index 4 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:47:30) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)



c=zeros(i,dtype=int)
for x in range(0,size(v)):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=x
		
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:49:07) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)



c=zeros(i,dtype=int)
for x in range(v>=2000):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=x
		
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:50:35) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)

n=size(v)
c=zeros(n,dtype=int)
for x in range(0,size(v)):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=x
		
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:52:38) 
-- CODE:
from numpy import*
v=array(eval(input("Digite o vetor de saque: ")))
i=0
for y in range(0,size(v)):
	if(v[y]>=2000):
		i=i+1
print(i)

n=size(v)
c=zeros(n,dtype=int)
for x in range(0,size(v)):
	p=0
	if(v[x]>=2000):
		c[0]=p
		c[x]=x
c=zeros(i,dtype=int)
c[0]=p
c[x]=x
print(c)			
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
